--- a/_posts/1900-01-01-test.md
+++ b/_posts/1900-01-01-test.md
@@ -87,11 +87,18 @@ The background color, accent border, padding, and margin must be correct. The ma
 
 Testing the `pre` element styling: background color, border radius, and font.
 
-```python
+``` python
 # Drill sequence: Lunge, Retreat, Parry Quarte
 def drill_001(fencer, target):
     fencer.lunge(target)
     fencer.retreat(1)
     fencer.parry('Quarte')
+
+```
+def drill_001(fencer, target):
+    fencer.lunge(target)
+    fencer.retreat(1)
+    fencer.parry('Quarte')
+```
 
 # Ensure this block uses the monospace font and light grey background.
