--- a/_posts/1900-01-01-test.md
+++ b/_posts/1900-01-01-test.md
@@ -95,3 +95,11 @@ def drill_001(fencer, target):
     fencer.parry('Quarte')
 # Ensure this block uses the monospace font and light grey background.
 ```
+
+
+
+| Weapon | Target Area | Focus |
+|---|---|---|
+| Foil | Torso | Precision |
+| Sabre | Waist up | Speed |
+| Epée | Entire body | Strategy |
